--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -43,7 +43,7 @@
     <div id="container">
         <header>
             <!--başlık kısmında olması gereken ögelerin gruplar-->
-            <img id="headerResim" src="img/planet2.jpg" alt="">
+            <img id="headerResim" src="planet2.jpg" alt="">
             <div id="centered"><i>SOFTWARE</i></div>
         </header>
 
@@ -63,7 +63,7 @@
             <!--class çoklu yansıtmalarda id tek etiketlerde kullanılır.-->
             <main>
                 <h1>Hakkımızda</h1>
-                <img id="hakkimizdaRSM" src="img/banner2.jpg" alt="">
+                <img id="hakkimizdaRSM" src="banner2.jpg" alt="">
 
                 <h3>Biz Kimiz?</h3>
 
