Referanslar Sayfası Oluşturuldu.

--- a/referanslar.html
+++ b/referanslar.html
@@ -43,7 +43,7 @@
     <div id="container">
         <header>
             <!--başlık kısmında olması gereken ögelerin gruplar-->
-            <img id="headerResim" src="img/planet2.jpg" alt="">
+            <img id="headerResim" src="planet2.jpg" alt="">
             <div id="centered"><i>SOFTWARE</i></div>
         </header>
 
@@ -62,7 +62,56 @@
             </nav>
             <!--class çoklu yansıtmalarda id tek etiketlerde kullanılır.-->
             <main>
-                <h1></h1>
+              <h1>Referanslar</h1>
+
+
+              <div class="referans">
+                <img src="ref1.jpg" alt="" class="refResim">
+
+                <h2 class="refBaslik">Software Company</h2>
+                <p class="refDetay"> Social Media - Graphic</p>
+
+            </div>
+
+            <div class="referans">
+                <img src="ref2.jpg" alt="" class="refResim">
+
+                <h2 class="refBaslik">Technology Company</h2>
+                <p class="refDetay"> Web Design</p>
+
+            </div>
+
+            <div class="referans">
+                <img src="ref3.jpg" alt="" class="refResim">
+
+                <h2 class="refBaslik">Marketing</h2>
+                <p class="refDetay"> Web Design- SEO</p>
+
+            </div>
+
+            <div class="referans">
+                <img src="ref4.jpg" alt="" class="refResim">
+
+                <h2 class="refBaslik">Universities</h2>
+                <p class="refDetay">Web Design - SEO - Graphic</p>
+
+            </div>
+
+            <div class="referans">
+                <img src="ref5.jpg" alt="" class="refResim">
+
+                <h2 class="refBaslik">Mr. Brown</h2>
+                <p class="refDetay">Corporate Identity</p>
+
+            </div>
+
+            <div class="referans">
+                <img src="ref6.jpg" alt="" class="refResim">
+
+                <h2 class="refBaslik">Wholesale Trading</h2>
+                <p class="refDetay"> Social Media</p>
+
+            </div>
 
             </main>
     
